# Skyblock-Coins-Bit-Discord-Bot

./: .env  Cargo.toml  Procfile.txt
src/: main.rs
src/commands/: math.rs  meta.rs
