[package]
name = "hello-rust"
version = "0.1.0"
authors = ["<pikachupalsmail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.3"
log = "0.4"
requests = "*"
time = "*"
json = "*"

[dependencies.serenity]
features = ["cache","framework","standard_framework","rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
