[package]
name = "hello-rust"
version = "0.1.0"
authors = ["<pikachupalsmail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
time = "*"
serde_json = "1.0.60"
json = "*"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.reqwest]
version = "0.10.10"
features = ["blocking", "json"]

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]

[dependencies.serenity]
features = ["cache","framework","standard_framework","rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
